# University-Repository

./: .gitignore  .pio-boards.txt  CLAUDE.md  README.md  platformio.ini
CrossplatformProgramming/: employees_output.txt  orders_output.txt
CrossplatformProgramming/Lr4Step/: Lr41Step.java  Lr43Step.java
CrossplatformProgramming/RgrStep/: Rgr1Step.java  Rgr2Step.java  game_result.txt  graph1.txt  graph2.txt  (+2 more)
OOP/: lr12.10.c  lr12.2.c  lr12.3.c  lr12.4.c  lr12.5.c  lr12.9.c  lr13.3.c  lr13.c  lr14.1.c  lr14.2.c  lr4.2.cpp  lr4.4.cpp
OOP/C++/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp
OOP/C++/IW/: Puzzle.cpp  sr1.2.cpp
OOP/C++/Lr1/: Lr1.1  Lr1.1.cpp  Lr1.10.cpp  Lr1.11.cpp  Lr1.12.cpp  Lr1.13.cpp  Lr1.14.cpp  Lr1.15.cpp  Lr1.16.cpp  Lr1.17.cpp  Lr1.18.cpp  Lr1.19.cpp  Lr1.2.cpp  Lr1.20.cpp  Lr1.21.cpp  Lr1.22.cpp  Lr1.3.cpp  Lr1.4.cpp  Lr1.5.cpp  Lr1.6.cpp  Lr1.7.cpp  Lr1.8.cpp  Lr1.9.cpp
OOP/C++/Lr10/: Lr10.1.cpp  Lr10.10.cpp  Lr10.12.cpp  Lr10.16.cpp  Lr10.17.cpp  Lr10.19.cpp  Lr10.2.cpp  Lr10.3.cpp  Lr10.4.cpp  Lr10.5.cpp  Lr10.6.cpp  Lr10.9.cpp
OOP/C++/Lr11/: Lr11.1  Lr11.1.cpp  Lr11.2  Lr11.2.cpp  Lr11.9  Lr11.9.cpp  test_file.txt
OOP/C++/Lr12/: Lr12.1  Lr12.11.cpp  Lr12.14.cpp  Lr12.2  Lr12.2.cpp  Lr12.3.cpp  Lr12.4  Lr12.4.cpp  Lr12.6  Lr12.6.cpp  Lr12.8  Lr12.8.cpp
OOP/C++/Lr13/: Lr13.1  Lr13.1.cpp  Lr13.2  Lr13.2.cpp  Lr13.3  Lr13.4  Lr13.4.cpp  Lr13.5  Lr13.5.cpp  Lr13.6  Lr13.6.cpp  Lr13.7  Lr13.7.cpp
OOP/C++/Lr14/: Lr14.1.cpp  Lr14.13.cpp  Lr14.14.cpp  Lr14.5.cpp  Lr14.6.cpp  Lr14.8.cpp
OOP/C++/Lr2/: Lr2.1.cpp  Lr2.10.cpp  Lr2.11.cpp  Lr2.13.cpp  Lr2.14.cpp  Lr2.15.cpp  Lr2.18.cpp  Lr2.3.cpp  Lr2.4.cpp  Lr2.5  Lr2.5.cpp  Lr2.7  Lr2.7.cpp  Lr2.8  Lr2.8.cpp  Lr2.9.cpp
OOP/C++/Lr3/: Lr3.1.cpp  Lr3.10.cpp  Lr3.11.cpp  Lr3.12.cpp  Lr3.13.cpp  Lr3.15.cpp  Lr3.2.cpp  Lr3.4.cpp  Lr3.5.cpp  Lr3.7.cpp
OOP/C++/Lr4/: hash_table_optimization_results.csv  lr4.1  lr4.1.cpp  lr4.2  lr4.2.cpp  lr4.3  lr4.3.cpp  lr4.4  naive_distribution.csv  time_comparison.csv
OOP/C++/Lr5/: Lr5.10.cpp  Lr5.11.cpp  Lr5.14.cpp  Lr5.5.cpp  Lr5.6.cpp  Lr5.8.cpp
OOP/C++/Lr6/: Lr6.1.cpp  Lr6.10.cpp  Lr6.11.cpp  Lr6.12.cpp  Lr6.13.cpp  Lr6.15.cpp  Lr6.16.cpp  Lr6.17.cpp  Lr6.18.cpp  Lr6.2.cpp  Lr6.5.cpp  Lr6.9.cpp
OOP/C++/Lr7/: Lr7.1.cpp  Lr7.11.cpp  Lr7.12.cpp  Lr7.2.cpp  Lr7.5.cpp  Lr7.8.cpp  Lr7.9.cpp
OOP/C++/Lr8/: Lr8.1.cpp  Lr8.11.cpp  Lr8.12.cpp  Lr8.2.cpp  Lr8.4.cpp  Lr8.7.cpp  Lr8.8.cpp
OOP/C++/Lr9/: Lr9.1.cpp  Lr9.12.cpp  Lr9.13.cpp  Lr9.14.cpp  Lr9.15.cpp  Lr9.17.cpp  Lr9.18.cpp  Lr9.19.cpp  Lr9.2.cpp  Lr9.21.cpp  Lr9.3.cpp  Lr9.5.cpp  Lr9.6.cpp  Lr9.7.cpp  Lr9.8.cpp
Year-2/Semester-2/ASPZ/LR/LR1/task1.3/: CMakeLists.txt  Makefile  input.c  main.c  output.c  process.c  process1.c  process1.h
(+554 files in other folders)
